Checking back in change (rev. 3.410) that was mistakenly backed out (in rev. 3.411): bug 13553 (Table doesn't render properly) patch submitted by bernd.mielke@snafu.de r=waterson sr=buster